--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto+Mono:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto+Mono:wght@300&family=Titillium+Web:wght@600&display=swap');
 
-
+.mousemove {
+  height: 50px;
+  width: 50px;
+  border: 2px solid pink;
+  border-radius: 50px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  transition: 0.2s ease-out;
+  z-index: -1;
+  }
+nav {
+  background: teal;
+  position: fixed;
+  width: 100%;
+  height: 50px;
+  transition: 0.3s ease;
+  overflow: hidden;
+  }
+nav::after {
+  content: "";
+  height: 150px;
+  width:150px;
+  background: radial-gradient(circle closest-side,white, transparent);
+  position:absolute;
+  transform: translate(-50%, -50%);
+  transition: 0.25s;
+  z-index: 20;
+  opacity:0;
+  left: var(--x);
+  top: var(--y);
+  
+  }
+  
+  nav:hover::after {
+  opacity: 1;
+  }
 
 h1,h2,h3{
   font-family: 'Titillium Web', sans-serif ;
